--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,8 @@
     "target": "esnext",
     "module": "esnext",
     "strict": true,
+    "strictNullChecks": false,
+    "removeComments": true,
     "jsx": "preserve",
     "importHelpers": true,
     "moduleResolution": "node",
