--- a/package.json
+++ b/package.json
@@ -1,41 +1,44 @@
 {
   "name": "draw-app-vue",
-  "version": "0.1.1",
+  "version": "1.0.0",
   "private": true,
+  "main": "./dist/DrawApp.umd.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "comp": "vue-cli-service build --target lib --name DrawCanvas ./src/DrawCanvas.vue"
   },
   "dependencies": {
     "core-js": "^3.6.5",
     "hammerjs": "^2.0.8",
     "vue": "^2.6.11",
-    "vue-class-component": "^7.2.3",
+    "vue-class-component": "^7.2.5",
     "vue-property-decorator": "^8.4.2"
   },
   "devDependencies": {
     "@types/hammerjs": "^2.0.36",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
-    "@vue/cli-plugin-babel": "^4.4.6",
-    "@vue/cli-plugin-eslint": "^4.4.6",
-    "@vue/cli-plugin-typescript": "^4.4.6",
-    "@vue/cli-service": "^4.4.6",
+    "@vue/cli-plugin-babel": "^4.5.2",
+    "@vue/cli-plugin-eslint": "^4.5.2",
+    "@vue/cli-plugin-typescript": "^4.5.2",
+    "@vue/cli-service": "^4.5.2",
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/eslint-config-typescript": "^5.0.2",
     "eslint": "^6.7.2",
-    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
-    "typescript": "~3.9.3",
+    "typescript": "^3.9.7",
     "vue-cli-plugin-pug": "^1.0.7",
     "vue-template-compiler": "^2.6.11"
   },
+  "types": "src/types/index.d.ts",
   "eslintConfig": {
     "root": true,
     "env": {
